app/assets/stylesheets/custom.css
/* bootstrap overrides */
a                               { cursor: pointer; font-weight: 600; color: #01232b; background-color: #00dde3; padding: 2px 5px; }
a:active, a:hover, a:focus      { text-decoration: none; }
a:hover                         { color: #01232b; background-color: #ffd829; }
body                            { font-family: 'Libre Franklin', sans-serif; color: #00dde3; background-color:#01232B; background-image: linear-gradient(#0A2F37 1px, transparent 1px), linear-gradient(90deg, #0A2F37 1px, transparent 1px), linear-gradient(rgba(10,47,55,.3) 1px, transparent 1px), linear-gradient(90deg, rgba(10,47,55,.3) 1px, transparent 1px); background-size:100px 100px, 100px 100px, 20px 20px, 20px 20px; background-position:-2px -2px, -2px -2px, -1px -1px, -1px -1px; }
footer                          { padding-bottom: 15px; padding-top: 15px; font-size: 12px; border-top: 1px solid #00dde3; line-height: 20px; }
h1, h2, h3                      { font-weight: 600; }
input[type="email"],
input[type="password"],
input[type="text"],
select.form-control             { border: none; border-bottom: 1px solid #ccc; background-color: transparent; box-shadow: none; padding-left: 0; }
pre                             { border-radius: 0; }

.alert                          { border-radius: 0; }
.alert-danger                   { background: linear-gradient(to right, rgba(255, 150, 50, 0.05), rgba(0,0,0,0)); border-color: #ffd829; color: #ffd829; }
.alert-danger .close            { color: #ffd829; }
.alert-danger .close:hover      { opacity: 0.7; }
.alert-success, .alert-warning  { background: linear-gradient(to right, rgba(39, 73, 78, 0.3), rgba(0,0,0,0)); border-color: #00dde3; color: #00dde3; }
.btn                            { border-radius: 0; }
.btn-danger                     { background-color: rgba(20,57,70,0.5); color: #00dde3; border-color: #00dde3; }
.btn-danger:hover               { background-color: #ff7b0a; }
.btn-default                    { background-color: rgba(20,57,70,0.5); color: #00dde3; border-color: #00dde3; }
.btn-default:active,
.btn-default:focus,
.btn-default:hover              { background-color: #ffd829; color: #11333b; border-color: #11333b; }
.btn-primary                    { background-color: #00dde3; color: #01232b; border-color: #00cdd3; font-weight: 600; }
.btn-primary:active,
.btn-primary:focus,
.btn-primary:hover              { background-color: #ffd829; color: #01232b; border-color: #efc819; }
.close                          { color: #00dde3; opacity: 0.8; text-shadow: none; }
.dl-horizontal dd               { margin-bottom: 5px; }
.form-control                   { border-radius: 0; }
.form-control:focus             { border-color: #555; box-shadow: none; -webkit-box-shadow: none; }
.form-group label               { font-size: 11px; color: #aaa; }
.form-group small               { color: #ccc; }
.form-group:focus-within label  { color: #555; font-weight: 600; }
.form-group:focus-within small  { color: #777; }
.form-horizontal .form-group label { color: #555; font-size: 14px; }
.navbar-collapse                { text-transform: uppercase; }
.navbar-default                 { background: linear-gradient(to right, rgba(39, 73, 78, 0.3), rgba(0,0,0,0)); border-color: #00dde3; }
.navbar-default li              { padding: 13px 20px; }
.navbar-default .navbar-brand   { color: #00dde3; padding: 16px 20px; background-color: transparent; }
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus { color: #00dde3; }
.navbar-default .navbar-collapse { width: 100%; border-color: #00dde3;}
.navbar-default .navbar-nav > li > a { color: #01232b; }
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus { background-color: #ffd829; }
.navbar-default .navbar-toggle  { border-color: #00dde3; }
.navbar-default .navbar-toggle .icon-bar { background-color: #00dde3; }
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus { background-color: rgba(0, 221, 227, 0.5); }
.page-header                    { margin: 20px 0; border-bottom: 1px dashed rgba(0, 221, 227, 0.5); }
.panel                          { background: linear-gradient(to right, rgba(39, 73, 78, 0.3), rgba(0,0,0,0)); border-radius: 0; }
.panel-default                  { border: 2px solid rgba(0, 221, 227, 1.0); }
.panel-default > .panel-heading { color: #00dde3; background-color: rgba(0, 221, 227, 0.13); border-color: rgba(0, 221, 227, 1.0); font-size: 14px; font-weight: 600; padding: 4px 5px; }
.panel-default .panel-body      { background-color: #eee; color: #01232B; }
.panel-default .panel-body .btn-default { background-color: #e8e8e8; color: #333; border-color: #01232b; }
.panel-default .panel-body .btn-default:hover { background-color: #f9f9f9; }
.panel-default .panel-body .btn-primary { background-color: #fff; border-color: #01232b; }
.panel-default .panel-body .btn-primary:hover { background-color: #f9f9f9; }
.panel-heading h4               { font-size: 14px; text-transform: uppercase; font-weight: 600; }
.panel-heading h4 small         { color: #00dde3; float: right; padding-top: 3px; color: rgba(0, 221, 227, 0.7); }
.panel-primary                  { border: 2px solid rgba(0, 221, 227, 0.5); }
.panel-primary:hover            { border: 2px solid rgba(0, 221, 227, 1.0); }
.panel-primary:hover .panel-heading { border-bottom: 1px solid rgba(0, 221, 227, 1.0); }
.panel-primary > .panel-heading { color: #00dde3; background-color: rgba(0, 221, 227, 0.13); border-color: rgba(0, 221, 227, 0.5); font-size: 14px; font-weight: 600; padding: 4px 5px; }
.panel-primary .form-control    { background: transparent; color: #ffd829; border: none; border-bottom: 1px solid rgba(0, 221, 227, 0.7); box-shadow: none; padding-left: 0; }
.panel-primary .form-control::placeholder { color: rgba(0, 221, 227, 0.35); }
.table-bordered                 { border: 1px solid rgba(0, 221, 227, 0.5); }
.table-bordered > thead         { background-color: rgba(0, 221, 227, 0.13); }
.table-bordered > thead > tr > th,
.table-bordered > tbody > tr > th,
.table-bordered > tfoot > tr > th,
.table-bordered > thead > tr > td,
.table-bordered > tbody > tr > td,
.table-bordered > tfoot > tr > td { border: 1px solid rgba(0, 221, 227, 0.5); }
.tooltip                        { width: 180px; }
.well                           { background-color: transparent; border-color: #00dde3; border-radius: 0; }

/* custom CSS declarations */
#particle-background            { position: absolute; display: block; top: 0; left: 0; z-index: -1; }
#security_note                  { font-size: 12px; }

.header-right                   { float: right; }
.limitos-command                { background: linear-gradient(to right, rgba(39, 73, 78, 0.3), rgba(0,0,0,0)); color: #00dde3; display: inline-block; padding: 10px 25px; border: 2px solid #00dde3; }
.limitos-command:hover          { background: transparent; color: #ffd829; border: 2px solid #ffd829; }
.limitos-logo                   { margin-top: 140px; font-size: 7vw; }
.limitos-logs                   { width: 100%; background: linear-gradient(to right, rgba(39, 73, 78, 0.3), rgba(0,0,0,0)); color: rgba(0, 221, 227, 0.8); display: inline-block; padding: 10px; border: 1px solid rgba(0, 221, 227, 0.5); }
.limitos-yellow                 { color: #ffd829; }
.maincontent-right              { border-left: 1px solid #00dde3; padding-bottom: 30px; }
.navbar-left                    { border: none; background-image: none; padding-left: 10px; margin-top: 10px; line-height: 30px; }
.navbar-left a                  { width: 127px; display: table-cell; line-height: 21px; }
.skew                           { transform: skew(-12deg); }
.slider .slider-handle          { background-color: #00dde3; background-image: linear-gradient(to bottom,#00dde3 0,#00dde3 100%); }
.slider .slider-selection       { background: #ffd829; }
.slider .slider-track-high      { background: #005057; }

/* extra small screens */
@media screen and (max-width: 767px) {
  .header-right                 { float: none; margin-top: 20px; }
  .limitos-command              { display: inherit; }
  .limitos-logo                 { margin-top: 140px; font-size: 72px; }
  .maincontent-right            { border-left: none; }
  .navbar-default .navbar-brand { padding-left: 0; }
  .navbar-default .navbar-toggle { margin-right: 0; }
  .navbar-left                  { padding-left: 0; padding-bottom: 20px; border-bottom: 1px solid rgba(0, 221, 227, 0.5); }
  .table-responsive             { border: 1px solid rgba(0, 221, 227, 0.5); }
}

/* larger screens */
@media (min-width: 768px) {
  #footer-right                 { float: right; }
  .navbar-nav > li > a          { padding: 2px 5px; }
}

